--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.51'
+    ext {
+        kotlin_version = '1.1.51'
+        butterKnifeVersion = '8.8.1'
+    }
     repositories {
         jcenter()
     }
@@ -18,6 +21,7 @@ allprojects {
     repositories {
         jcenter()
     }
+
 }
 
 task clean(type: Delete) {
