--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+
 
 android {
     compileSdkVersion 26
@@ -23,7 +25,6 @@ android {
         }
     }
 }
-
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -44,9 +45,10 @@ dependencies {
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
 
-//    butterknife
-    compile "com.jakewharton:butterknife:${butterKnifeVersion}"
-    kapt "com.jakewharton:butterknife-compiler:${butterKnifeVersion}"
+//
+////    butterknife
+//    compile "com.jakewharton:butterknife:${butterKnifeVersion}"
+//    kapt "com.jakewharton:butterknife-compiler:${butterKnifeVersion}"
 }
 repositories {
     mavenCentral()
