--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,10 +45,8 @@ dependencies {
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
 
-//
-////    butterknife
-//    compile "com.jakewharton:butterknife:${butterKnifeVersion}"
-//    kapt "com.jakewharton:butterknife-compiler:${butterKnifeVersion}"
+    // Rx rxbinding
+    compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
 }
 repositories {
     mavenCentral()
