--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@
 buildscript {
     ext {
         kotlin_version = '1.1.51'
-        butterKnifeVersion = '8.8.1'
         supportLibVersion = '26.+'
+        retrofitVersion = "2.0.0"
     }
     repositories {
         jcenter()
